fixed filter title truncation with category script and customized search results appearance

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -34,3 +34,7 @@ iframe{
 	width: 100%;
 	display: flex;
 	height: 200px;
+}
+.search-query {
+	right: auto !important;
+}
